force-app/main/default/objects/Staging_Table__c/Staging_Table__c.object-meta.xml
<CustomObject>
    <description>MERIT-PIM Integration</description>
    <label>Staging Table</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Staging Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>