force-app/main/default/objects/Staging_Table__c/fields/CPW_Applicable_Product__c.field-meta.xml
<CustomField>
    <fullName>CPW_Applicable_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPW Applicable Product?</label>
    <type>Checkbox</type>
</CustomField>