force-app/main/default/objects/Staging_Table__c/fields/Eligible_for_Sales_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Sales_Incentives__c</fullName>
    <label>Eligible for Sales Incentives</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>