force-app/main/default/objects/Staging_Table__c/fields/Enterprise_Growth_Product__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Growth_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enterprise Growth Product</label>
    <type>Checkbox</type>
</CustomField>