force-app/main/default/objects/Staging_Table__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advocacy</fullName>
            </value>
            <value>
                <fullName>Behavioral Health</fullName>
            </value>
            <value>
                <fullName>Claim Fiduciary</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>COBRA</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Condition Base Plan Design</fullName>
            </value>
            <value>
                <fullName>Consumer Driven</fullName>
            </value>
            <value>
                <fullName>Consumer Reward / Discount Programs</fullName>
            </value>
            <value>
                <fullName>Consumer Tools</fullName>
            </value>
            <value>
                <fullName>Financial Accounts</fullName>
            </value>
            <value>
                <fullName>High Performing Network Solutions</fullName>
            </value>
            <value>
                <fullName>Intermittent Workforce</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Medical Necessity</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Non-Standard / Customized Products</fullName>
            </value>
            <value>
                <fullName>Optum Direct</fullName>
            </value>
            <value>
                <fullName>Out-of-Network Reimbursement Program - LEGACY/NON-PREFERRED PACKAGE</fullName>
            </value>
            <value>
                <fullName>Out-of-Network Reimbursement Program - PREFERRED PACKAGE</fullName>
            </value>
            <value>
                <fullName>Payment Integrity</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Pilot Programs</fullName>
            </value>
            <value>
                <fullName>Private Exchange</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Retiree</fullName>
            </value>
            <value>
                <fullName>Specialty Medications</fullName>
            </value>
            <value>
                <fullName>Specialty Products</fullName>
            </value>
            <value>
                <fullName>Stop Loss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>