force-app/main/default/objects/Staging_Table__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>