force-app/main/default/objects/Staging_Table__c/fields/Key_Growth_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Key_Growth_Drivers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Growth Drivers</label>
    <type>Checkbox</type>
</CustomField>