force-app/main/default/objects/Staging_Table__c/fields/Level_2_Options__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Options__c</fullName>
    <label>Level 2 Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Designated</fullName>
            </value>
            <value>
                <fullName>Dedicated</fullName>
            </value>
            <value>
                <fullName>Standard NRS</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Buy Up</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Health Care Spending card – HCSC</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>HSA Card</fullName>
            </value>
            <value>
                <fullName>Pre-Payment Subrogation</fullName>
            </value>
            <value>
                <fullName>Post-Payment Subrogation</fullName>
            </value>
            <value>
                <fullName>COE Mandate</fullName>
            </value>
            <value>
                <fullName>No COE Mandate</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>FI</fullName>
            </value>
            <value>
                <fullName>Optum Bank</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>UHC</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Carve In</fullName>
            </value>
            <value>
                <fullName>Carve in - OptumRx</fullName>
            </value>
            <value>
                <fullName>Carve in - OneRx</fullName>
            </value>
            <value>
                <fullName>Carve out Flex - OptumRx</fullName>
            </value>
            <value>
                <fullName>Carve out - OptumRx</fullName>
            </value>
            <value>
                <fullName>Carve Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>