force-app/main/default/objects/Staging_Table__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>