force-app/main/default/objects/Staging_Table__c/fields/PIM_Availability__c.field-meta.xml
<CustomField>
    <fullName>PIM_Availability__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PIM Availability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>