force-app/main/default/objects/Staging_Table__c/fields/PIM_ID__c.field-meta.xml
<CustomField>
    <fullName>PIM_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>PIM ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>