force-app/main/default/objects/Staging_Table__c/fields/PIM_ID_COMPOSITE__c.field-meta.xml
<CustomField>
    <fullName>PIM_ID_COMPOSITE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PIM ID Composite Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>