force-app/main/default/objects/Staging_Table__c/fields/PIM_SME_NAME__c.field-meta.xml
<CustomField>
    <fullName>PIM_SME_NAME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PIM SME Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>