force-app/main/default/objects/Staging_Table__c/fields/Product_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Product_Display_Order__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Display Order</label>
    <length>40</length>
    <type>Text</type>
</CustomField>