force-app/main/default/objects/Staging_Table__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Code</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>