force-app/main/default/objects/Staging_Table__c/fields/SalesforceGO_Applicable_Product__c.field-meta.xml
<CustomField>
    <fullName>SalesforceGO_Applicable_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SalesforceGO Applicable Product?</label>
    <type>Checkbox</type>
</CustomField>