force-app/main/default/objects/Staging_Table__c/fields/Underwriting_Validation__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Validation__c</fullName>
    <label>Underwriting Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>